reorganized layout sass

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <div class="home-img">
   <center>
-    <img src="{{ site.baseurl }}assets/lowRes.png">
+    <img src="{{ site.baseurl }}assets/CroppedWebsite.png">
   </center>
 </div>
 
